--- a/.gitignore
+++ b/.gitignore
@@ -49960,3 +49960,4 @@ data/gnt-jpg/train/C012-3231.jpg
 data/gnt-jpg/train/C012-3232.jpg
 data/gnt-jpg/train/C012-3233.jpg
 data/gnt-jpg/train/C012-3234.jpg
+models/hccr-model2.0.pth
